fixed buy button wrap

--- a/style.css
+++ b/style.css
@@ -223,6 +223,7 @@ color: black;
 
 #upgrade-tool{
     color: black;
+    white-space: normal;
     
 }
 
